--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ h1 {
     border-radius: 10px;
     cursor: pointer;
     transition: .7s ease;
+    z-index: 999;
 }
 
 .again {
@@ -136,6 +137,8 @@ h1 {
     z-index: 9999;
     opacity: 0;
     transition: .2s linear;
+    border: 1px white solid;
+    z-index: 1;
 }
 
 .chosen .sel p {
